Fix: add echo to test branch name 2

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -3,9 +3,8 @@ name: Block pull requests to main and run on merge of pull request from develop
 on:
   pull_request:
     branches:
-      - '**' # matches every branch
-      - '!main'
-      - 'fran-test*'
+      - '**'
+
 jobs:
   block-pull-requests:
     runs-on: ubuntu-latest
@@ -13,6 +12,7 @@ jobs:
       - name: Check branch name
         if: github.event.pull_request.base.ref == 'main'
         run: |
+          echo "-----"
           echo $GITHUB_HEAD_REF
           if [ "$GITHUB_HEAD_REF" != "develop" ]; then
             echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
