Fix: add echo to test branch name 5

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -12,10 +12,11 @@ jobs:
       - name: Check branch name
         run: |
           echo "GITHUB_HEAD_REF -- $GITHUB_HEAD_REF"
-          echo "github.event.pull_request.base.ref -- $github.event.pull_request.base.ref"
+          echo "---"
+          echo github.event.pull_request.base.ref
       
       - name: Check branch name
-        if: github.event.pull_request.base.ref == 'main'
+        if:  == 'main'
         run: |
           if [ "$GITHUB_HEAD_REF" != "develop" ]; then
             echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
