--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -3,7 +3,8 @@ name: Rejecting Pull Requests to Main from branches other than develop.
 on:
   pull_request:
     branches:
-      - main
+      - '**'
+      - '!main'
 
 jobs:
   reject_pr_job:
