--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -2,9 +2,9 @@ name: Rejecting Pull Requests to Main from branches other than develop.
 
 on:
   pull_request:
-    types: [opened]
     branches:
       - '**'
+      - '!main'
 
 jobs:
   reject_pr_job:
