--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Check branch name
         if: github.event.pull_request.base.ref == 'main'
         run: |
-          if [ "$GITHUB_HEAD_REF" != "develop" ]; then
+          if [ "$GITHUB_HEAD_REF" != "develop"  ||  "$GITHUB_HEAD_REF" != "main" ]; then
             echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
             exit 1
           fi
