--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -1,6 +1,9 @@
 name: Changelog steps
 
 on:
+  workflow_run:
+    workflows: [block-pr]
+    types: [completed]
   pull_request:
     types: [closed]
     branches:
@@ -8,7 +11,6 @@ on:
 
 jobs:
   run-on-merge:
-    needs: reject_pr_job
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
     steps:
