--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -7,6 +7,12 @@ on:
       - main
 
 jobs:
+  reject_pr_job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: do-nothing
+        run: echo "This job does nothing"
+
   run-on-merge:
     needs: reject_pr_job
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
