--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -13,12 +13,13 @@ jobs:
       - name: do-nothing
         run: echo "This job does nothing"
       - name: Set status
-        uses: rtCamp/github-status-action@v2.3
+        uses: Sibz/github-status-action@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          state: success
+          authToken: ${{ secrets.TOKEN_CHANGELOG }}
           description: 'The reject_pr_job succeeded'
-          context: reject_pr_job
+          context: 'Test run'
+          state: 'success'
+          sha: ${{github.event.pull_request.head.sha || github.sha}}
 
 
   run-on-merge:
