--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -10,32 +10,17 @@ jobs:
   reject_pr_job:
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies
-        run: npm install @actions/github
+      - uses: actions/checkout@v2
       - name: do-nothing
         run: echo "This job does nothing"
-      - name: Set status
-        uses: actions/github-script@v3
-        with:
-          script: |
-            const { github: gh } = require('@actions/github');
-            const octokit = new gh.getOctokit('${{ secrets.TOKEN_CHANGELOG }}');
-            const { data: statuses } = await octokit.rest.repos.listStatusesForRef({
-              owner: gh.context.repo.owner,
-              repo: gh.context.repo.repo,
-              ref: gh.context.sha,
-            });
-            const statusExists = statuses.some(status => status.context === 'reject_pr_job');
-            if (!statusExists) {
-              await octokit.rest.repos.createCommitStatus({
-                owner: gh.context.repo.owner,
-                repo: gh.context.repo.repo,
-                sha: gh.context.sha,
-                state: 'success',
-                context: 'reject_pr_job',
-                description: 'The reject_pr_job succeeded',
-              });
-            }
+      - name: Run the action # You would run your tests before this using the output to set state/desc
+        uses: Sibz/github-status-action@v1
+        with: 
+          authToken: ${{secrets.GITHUB_TOKEN}}
+          context: 'Test run'
+          description: 'Passed'
+          state: 'success'
+          sha: ${{github.event.pull_request.head.sha || github.sha}}
 
 
   run-on-merge:
