--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -50,6 +50,7 @@ jobs:
           github_token: ${{ secrets.TOKEN_CHANGELOG }}
           message: "Changelog version updated"
           tags: true
+          force: true
 
       - name: create tags
         if: ${{env.should_add_last_changes_to_master == 'true'}}
