--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -49,7 +49,7 @@ jobs:
         with:
           github_token: ${{ secrets.TOKEN_CHANGELOG }}
           tags: true
-          force_with_lease: true
+          force: true
 
       - name: create tags
         if: ${{env.should_add_last_changes_to_master == 'true'}}
