--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -44,15 +44,13 @@ jobs:
           echo "should_add_last_changes_to_master=$should_add_last_changes_to_master" >> $GITHUB_ENV
 
       - name: commit-push-changes
-        uses: dciborow/commit@0.0.2
+        uses: actions-js/push@master
         if: ${{env.should_add_last_changes_to_master == 'true'}}
         with:
-          github_token: ${{ secrets.TOKEN_CHANGELOG }}
-          push-branch: 'master'
-          commit-message: "Changelog version updated"
-          force-add: 'true'
-          force-push: 'true'
-          files: CHANGELOG.md VERSION
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          message: "Changelog version updated"
+          tags: true
+          force: true          
 
       - name: create tags
         if: ${{env.should_add_last_changes_to_master == 'true'}}
