--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -27,6 +27,8 @@ jobs:
     needs: reject_pr_job
     permissions:
       pull-requests: write
+      actions: write
+      repository-projects: write
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
     steps:
