--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Run the action # You would run your tests before this using the output to set state/desc
         uses: Sibz/github-status-action@v1
         with: 
-          authToken: ${{secrets.TOKEN_CHANGELOG}}
+          authToken: ${{secrets.GITHUB_TOKEN}}
           context: 'Test run'
           description: 'Passed'
           state: 'success'
@@ -48,7 +48,7 @@ jobs:
         uses: actions-js/push@master
         if: ${{env.should_add_last_changes_to_master == 'true'}}
         with:
-          github_token: ${{ secrets.TOKEN_CHANGELOG }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           message: "Changelog version updated"
           tags: true
           force: true          
