Fix: el definitivo 11

--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  reject_pr_job:
+  reject_pr_job_main:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +24,6 @@ jobs:
 
 
   run-on-merge:
-    needs: reject_pr_job
     permissions: write-all
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
