Fix: el definitivo 15

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -2,7 +2,6 @@ name: block-pr
 
 on:
   pull_request:
-    types: [opened]
     branches:
       - '**'
 
@@ -11,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:      
       - name: Check branch name
-        if: github.event.pull_request.base.ref == 'main'
+        if: github.event.pull_request.base.ref == 'main' && github.event.action != 'synchronize'
         run: |
           echo "----"
           echo $GITHUB_HEAD_REF
