Fix: el definitivo 16

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:      
       - name: Check branch name
-        if: github.event.pull_request.base.ref == 'main' && github.event.action != 'synchronize'
+        if: github.event.pull_request.base.ref == 'main' && github.event.action != 'synchronize' && github.event.action != 'closed'
         run: |
           echo "----"
           echo $GITHUB_HEAD_REF
