--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -8,9 +8,8 @@ on:
 jobs:
   reject_pr_job:
     runs-on: ubuntu-latest
-    steps:      
+    steps:
       - name: Check branch name
-        if: github.event.pull_request.base.ref == 'main' && github.event.action != 'synchronize' && github.event.action != 'closed'
         run: |
           echo "----"
           echo $GITHUB_HEAD_REF
@@ -19,4 +18,23 @@ jobs:
             exit 1
           fi
 
-
+  protect_branch:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Protect branch
+        uses: peter-evans/protect-branch@v3.2.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main
+          enforce_admins: true
+          required_approving_review_count: 1
+          required_status_checks: |
+            {
+              "strict": true,
+              "contexts": ["reject_pr_job"]
+            }
