--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  reject_pr_job_main:
+  reject_pr_job:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -53,7 +53,10 @@ jobs:
           github_token: ${{ secrets.GH_TOKEN }}
           message: "Changelog version updated"
           tags: true
-          force: true          
+          force: true   
+        run:
+          echo "----------"
+          echo $GITHUB_HEAD_REF       
 
       - name: create tags
         if: ${{env.should_add_last_changes_to_master == 'true'}}
