--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -46,6 +46,11 @@ jobs:
           echo $should_add_last_changes_to_master
           echo "should_add_last_changes_to_master=$should_add_last_changes_to_master" >> $GITHUB_ENV
 
+      - name: echo-variables
+        run: |
+          echo "----------"
+          echo $GITHUB_HEAD_REF  
+
       - name: commit-push-changes
         uses: actions-js/push@master
         if: ${{env.should_add_last_changes_to_master == 'true'}}
@@ -53,10 +58,7 @@ jobs:
           github_token: ${{ secrets.GH_TOKEN }}
           message: "Changelog version updated"
           tags: true
-          force: true   
-        run:
-          echo "----------"
-          echo $GITHUB_HEAD_REF       
+          force: true      
 
       - name: create tags
         if: ${{env.should_add_last_changes_to_master == 'true'}}
