Fix: more changes 2

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check branch name
+        if: github.event.pull_request.base.ref == 'main'
         run: |
           echo "----"
           echo $GITHUB_HEAD_REF
