--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -24,7 +24,7 @@ jobs:
 
 
   run-on-merge:
-    needs: reject_pr_job_main
+    needs: reject_pr_job
     permissions: write-all
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
