--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -13,8 +13,9 @@ jobs:
       - name: Check branch name
         if: github.event.pull_request.base.ref == 'main'
         run: |
-          echo "----"
           echo $GITHUB_HEAD_REF
+          echo "Head $github.event.pull_request.head.ref"
+          echo "Base $github.event.pull_request.base.ref"
           if [ $GITHUB_HEAD_REF != "develop" ]; then
             echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
             exit 1
