Fix: more changes 16

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   reject_pr_job:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.head.ref != 'develop'
+    if: github.event.pull_request.head.ref != 'develop' && github.actor != 'github-actions[bot]'
     steps:
       - name: Check branch name
         if: github.event.pull_request.base.ref == 'main'
