--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -14,6 +14,7 @@ jobs:
         if: github.event.pull_request.base.ref == 'main'
         run: |
           echo $GITHUB_HEAD_REF
+          echo $github.actor
           if [ $GITHUB_HEAD_REF != "develop" ]; then
             echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
             exit 1
