Fix: otro commit 4

--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -33,6 +33,7 @@ jobs:
         run: |
           echo "----------"
           echo $GITHUB_HEAD_REF  
+          echo $github.actor
 
       - name: commit-push-changes
         uses: actions-js/push@master
