Fix: otro commit 5-2

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -15,7 +15,7 @@ jobs:
         run: |
           echo $GITHUB_HEAD_REF
           echo $github.actor
-          echo "${github.actor} is trying to merge ${GITHUB_HEAD_REF} into ${github.event.pull_request.base.ref}"
+          echo "${{github.actor}} is trying to merge ${GITHUB_HEAD_REF} into ${github.event.pull_request.base.ref}"
           if [ $GITHUB_HEAD_REF != "develop" ]; then
             echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
             exit 1
