Fix: otro commit 5-4

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -15,10 +15,10 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github) }} 
         if: github.event.pull_request.base.ref == 'main'
         run: |
-          echo $GITHUB_HEAD_REF
-          echo $github.actor
           echo "$GITHUB_CONTEXT"
-          echo "$GITHUB_CONTEXT.actor"
+          echo $GITHUB_HEAD_REF
+          ACTOR=$(echo "$GITHUB_CONTEXT" | jq -r '.actor')
+          echo "Actor: $ACTOR"
           echo "${{ github.actor }} is trying to merge ${GITHUB_HEAD_REF} into ${github.event.pull_request.base.ref}"
           if [ $GITHUB_HEAD_REF != "develop" ]; then
             echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
