--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -23,7 +23,10 @@ jobs:
             exit 1
           fi
       
+  call_block_pr_job:
+    runs-on: ubuntu-latest
+    needs: reject_pr_job
+    if: github.actor == 'github-actions[bot]'
+    steps:
       - name: Call block-pr workflow
-        uses: actions/workflow-dispatch@v2
-        with:
-          workflow: block-pr.yaml
+        uses: ./.github/workflows/block-pr.yaml
