--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   call-workflow-1-in-local-repo:
-    uses: ./.github/workflows/block-pr.yaml
+    uses: block-pr.reject_pr_job
   run-on-merge:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
