--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -7,6 +7,22 @@ on:
       - main
 
 jobs:
+  reject_pr_job:
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.head.ref != 'develop' && github.actor != 'github-actions[bot]' && github.event.pull_request.base.ref == 'main' && github.event.pull_request.merged == true
+    steps:
+      - name: Check branch name
+        env: 
+          GITHUB_CONTEXT: ${{ toJson(github) }} 
+        run: |
+          echo $GITHUB_HEAD_REF
+          ACTOR=$(echo "$GITHUB_CONTEXT" | jq -r '.actor')
+          echo "Actor: $ACTOR"
+          if [ $GITHUB_HEAD_REF != "develop" ]; then
+            echo "Pull request not allowed from branch $GITHUB_HEAD_REF. Only pull requests from the develop branch are allowed."
+            exit 1
+          fi
+
   run-on-merge:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
