--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -24,6 +24,7 @@ jobs:
           fi
 
   run-on-merge:
+    needs: reject_pr_job
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
     steps:
