--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -9,6 +9,7 @@ on:
 jobs:
   reject_pr_job:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.head.ref != 'develop'
     steps:
       - uses: actions/checkout@v2
       - name: do-nothing
@@ -27,6 +28,15 @@ jobs:
     if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'develop'
     runs-on: ubuntu-latest
     steps:
+      - name: commit-push-changes
+        uses: actions-js/push@master
+        if: ${{env.should_add_last_changes_to_master == 'true'}}
+        with:
+          github_token: ${{ secrets.GH_TOKEN }}
+          message: "Changelog version updated"
+          tags: true
+          force: true  
+
       - name: Checkout code
         uses: actions/checkout@v2
         with:
