--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   reject_pr_job:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.head.ref != 'develop' && github.event.pull_request.base.ref == 'main' && env.GITHUB_EVENT_NAME != 'push'
+    if: github.event.pull_request.head.ref != 'develop' && github.event.pull_request.base.ref == 'main' && github.event_name != 'push'
     steps:
       - name: Check branch name
         env: 
