Fix: otro commit 5-9

--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -33,7 +33,7 @@ jobs:
         if: ${{env.should_add_last_changes_to_master == 'true'}}
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          message: "Changelog version updated"
+          message: "Changelog version updated [skip ci]"
           tags: true
           force: true  
           context: skip-reject-pr-job    
