--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Push changes
         if: ${{env.should_add_last_changes_to_master == 'true'}}
         run: |
-          git merge --no-ff "$GITHUB_HEAD_REF"
+          git merge --no-ff origin/develop
           git commit --message "Changelog version updated [skip ci]"
           git push origin main
 
