--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -36,11 +36,11 @@ jobs:
       - name: Push changes
         if: ${{env.should_add_last_changes_to_master == 'true'}}
         run: |
-          git remote set-url origin https://github.com/yessica-rd/changelog-update.git
           git merge --no-ff origin/develop
+          git remote set-url origin https://github.com/yessica-rd/changelog-update.git
           git add .
           git commit --message "Changelog version updated [skip ci]"
-          git push origin main
+          git push origin main --force-with-lease --no-verify
 
       - name: create tags
         if: ${{env.should_add_last_changes_to_master == 'true'}}
