--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -27,12 +27,16 @@ jobs:
           should_add_last_changes_to_master=$(./script.sh $repository_name)
           echo $should_add_last_changes_to_master
           echo "should_add_last_changes_to_master=$should_add_last_changes_to_master" >> $GITHUB_ENV
+      
+      - name: Configure Git
+        run: |
+          git config user.name ${{ secrets.GH_ACTOR }}
+          git config user.email ${{ secrets.GH_EMAIL }}
+          git config credential.helper 'store --file ~/.git-credentials'
 
       - name: Push changes
         if: ${{env.should_add_last_changes_to_master == 'true'}}
         run: |
-          git config user.name ${{ secrets.GH_ACTOR }}
-          git config user.email ${{ secrets.GH_EMAIL }}
           git merge --no-ff origin/develop
           git remote set-url origin https://github.com/yessica-rd/changelog-update.git
           git add .
