--- a/.github/workflows/update-version.yaml
+++ b/.github/workflows/update-version.yaml
@@ -32,13 +32,14 @@ jobs:
         run: |
           git config user.name ${{ secrets.GH_ACTOR }}
           git config user.email ${{ secrets.GH_EMAIL }}
-          git config credential.helper 'store --file ~/.git-credentials'
 
       - name: Push changes
         if: ${{env.should_add_last_changes_to_master == 'true'}}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git merge --no-ff origin/develop
-          git remote set-url origin https://github.com/yessica-rd/changelog-update.git
+          git remote set-url origin https://${{ secrets.GH_ACTOR }}:${{ secrets.GH_TOKEN }}@github.com/yessica-rd/changelog-update.git
           git add .
           git commit --message "Changelog version updated [skip ci]"
           git push origin main --force-with-lease --no-verify
