Testing branch push

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -2,9 +2,10 @@ name: block-pr
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened, edited]
     branches:
-      - main
       - develop
+      - main
 
 jobs:
   reject_pr_job:
