Testing branch push 2

--- a/.github/workflows/block-pr.yaml
+++ b/.github/workflows/block-pr.yaml
@@ -1,10 +1,14 @@
 name: block-pr
 
 on:
-  pull_request:
+  push:
     branches:
-      - main
+      - '**'
+  pull_request:
+    types: [opened, synchronize, reopened, edited]
+    branches:
       - develop
+      - main
 
 jobs:
   reject_pr_job:
